# pytest_training

./: .gitignore  pyproject.toml
tests/: test_accountant.py
utilities/: accountant.py  str_utilities.py  timesheet.py
