[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utilities"
version = "0.0.1"
authors = [
  { name="Me", email="me.myself.and.i@teampanoptes.be" },
]
description = "A small example package"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
